# project-1-MinhNhat

./: .gitignore  CMakeLists.txt  README.md  main.c
project-1-MinhNhat/: .gitignore  CMakeLists.txt  README.md  toolchain_win.cmake
project-2-MinhNhat/: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c  toolchain_win.cmake
project-2-MinhNhat/include/: binary_io.h  json_writer.h  weather_parser.h  weather_types.h
project-2-MinhNhat/src/: binary_io.c  json_writer.c  weather_parser.c
